--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Projects</h1>
+<h1>Natalie Hawley</h1>
+  <h2>Projects</h2>
+        <ul>
+        <li>Project A: <a href="project-b">Asian-Americans in San Francisco</a></li>
+        <li>Project B: <a href="project-c">Predicting Yelp Ratings of Restaurants in Boston</a></li>
+        <li>Project C: <a href="project-d">5:00AM Taxis in Manhattan</a></li>
+      </ul>
 </body>
 </html>
