--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <li>Project A: <a href="project-b">Asian-Americans in San Francisco</a></li>
         <li>Project B: <a href="project-c">Predicting Yelp Ratings of Restaurants in Boston</a></li>
         <li>Project C: <a href="project-d">5:00AM Taxis in Manhattan</a></li>
+          <li>Project D: <a href="garmin-rmd">Garmin</a></li>
       </ul>
 </body>
 </html>
